--- a/DataEmpirical/config.yaml
+++ b/DataEmpirical/config.yaml
@@ -1,10 +1,17 @@
 INFERENCE_REPLICATE:
   CHAINS: [1, 2]
-  MODELS: [node, nodeomega]
+  MODELS: [nodeomega]
   POLYMORPHISM: [false]
 INFERENCE:
-  POINTS: 4000
+  RESTART: false
+  POINTS: 3000
   PRECISION: 12
-  NCAT: 10
+  NCAT: 50
+INFERENCE_NODE:
+  MOVE_ROOT_POP_SIZE: false
+  CLAMP_POP_SIZES: false
+  CLAMP_NUC_MATRIX: false
+  CLAMP_CORR_MATRIX: false
+  ARITHMETIC: false
 PLOT:
   BURN_IN: 300
