--- a/DataEmpirical/config.yaml
+++ b/DataEmpirical/config.yaml
@@ -1,10 +1,10 @@
 INFERENCE_REPLICATE:
   CHAINS: [1, 2]
-  MODELS: [nodeomega]
+  MODELS: [node, aa, nodeomega]
   POLYMORPHISM: [false]
 INFERENCE:
-  RESTART: false
-  POINTS: 3000
+  RESTART: true
+  POINTS: 4000
   PRECISION: 12
   NCAT: 50
 INFERENCE_NODE:
@@ -14,4 +14,4 @@ INFERENCE_NODE:
   CLAMP_CORR_MATRIX: false
   ARITHMETIC: false
 PLOT:
-  BURN_IN: 300
+  BURN_IN: 1000
